--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,16 @@
 {
+    "name": "olml89/emagister-test",
     "require-dev": {
         "phpunit/phpunit": "^9.5"
+    },
+    "autoload": {
+        "psr-4": {
+            "Heritages\\App\\": "app/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Heritages\\Tests\\": "tests/"
+        }
     }
 }
